<resources>
    <string name="app_name">AttentionApp</string>

    <!--Login-->
    <string name="et_email">Correo electronico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="tv_createAccount">No tengo una cuenta</string>

    <!--Create Account-->
    <string name="et_first_name">Nombres</string>
    <string name="et_last_name">Apellidos</string>
    <string name="et_re_password">Reingresar Contraseña</string>
    <string name="tv_accept_terms">Al crear una cuenta acepta los terminos y condiciones de nuestro servicio</string>
    <string name="btn_register">Registrar</string>

    <!--Main-->
    <string name="btn_create_account">Crear una cuenta</string>

    <!--Home-->
    <string name="title_home">Home</string>
    <string name="title_account">Mi cuenta</string>
    <string name="tile_record">Historial</string>
    <string name="title_nurses">Enfermeras</string>
    <string name="nurse_image_description">Foto de la enfermera</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="shortname">ShortName</string>
    <string name="email">Email</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="contratar">Contratar</string>
    <string name="tipo_de_enfermera">Tipo de Enfermera:</string>
    <string name="licenciada">Licenciada</string>
    <string name="number">123456789</string>
    <string name="dni">DNI</string>
    <string name="genero_label">Género</string>
    <string name="gender">Femenino</string>
    <string name="descripcion">Pequeña descripcion</string>
    <string name="descripcion_label">Descripción</string>
    <string name="escoger_dia">Escoger dia</string>
    <string name="day">xx/xx/xxxx</string>
    <string name="hora_de_reserva">Hora de reserva:</string>
    <string name="numero_de_horas">Numero de horas</string>
    <string name="seleccionar_dia">Seleccionar Dia</string>
    <string name="gerenic_day">20/10/2019</string>
    <string name="visualizar_tarjetas">Visualizar Tarjetas</string>
    <string name="banco_label">Banco:</string>
    <string name="bank_name">Banco 1</string>
    <string name="numero_de_cuenta_label">Numero de cuenta:</string>
    <string name="account_number">123 123456789 123</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reservation">Map</string>

    <string name="genre">Genre</string>


</resources>
